--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'Z'
 - !lcsh 'Children''s literature -- Catalogs'
 - !lcsh 'Blackie & Son -- Catalogs'
+- GITenberg
 title: Blackie & Son's Books for Young People, Catalogue - 1886
 url: http://www.gutenberg.org/ebooks/36411
